add unitTest mocha

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -23,12 +23,9 @@
         <![endif]-->
     </head>
 <body>
-    <div class='text-center'>
-        
-
-
-<label class="control-label">Select File</label>
-<input id="input-1" type="file" multiple=true class="file-loading">
+    <div class="">
+        <div class="">dd</div>
+        <div class="">d2</div>
     </div>
 <script>
 $(document).on('ready', function() {
